[gd_scene load_steps=11 format=3 uid="uid://b2hqqgawsr5xj"]

[ext_resource type="Script" path="res://scenes/start_menu/ai_choice.gd" id="1_h0yb4"]
[ext_resource type="Theme" uid="uid://cvdcsgkxe4hex" path="res://assets/ui/universal_theme.tres" id="2_8n17o"]
[ext_resource type="Texture2D" uid="uid://bho5tbem6kb6" path="res://assets/ui/04_Stone_Theme/Sprites/UI_Stone_Button_Small_Release_02a3.png" id="3_toxn4"]
[ext_resource type="Texture2D" uid="uid://clw0d6y4veguv" path="res://assets/ui/04_Stone_Theme/Sprites/UI_Stone_Button_Small_Release_02a2.png" id="4_d5708"]
[ext_resource type="Texture2D" uid="uid://5f4v7yv64yjp" path="res://assets/ui/04_Stone_Theme/Sprites/UI_Stone_Button_Small_Release_02a4.png" id="5_eifsg"]
[ext_resource type="Texture2D" uid="uid://cpd4sopislhv" path="res://assets/ui/04_Stone_Theme/Sprites/UI_Stone_Arrow_Large_01a.png" id="6_0bpc5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sd61m"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_i4wmu"]
content_margin_top = 1.0
content_margin_bottom = 17.0
texture = ExtResource("3_toxn4")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_humtf"]
content_margin_top = 11.0
content_margin_bottom = 2.0
texture = ExtResource("4_d5708")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bvely"]
content_margin_bottom = 22.0
texture = ExtResource("5_eifsg")

[node name="AiChoice" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h0yb4")

[node name="game options" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -154.0
offset_right = 200.0
offset_bottom = 154.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="ai easy" type="PanelContainer" parent="game options"]
self_modulate = Color(1, 1, 1, 0)
clip_contents = true
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 4

[node name="Button" type="Button" parent="game options/ai easy"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("2_8n17o")
text = "Easy"

[node name="ai medium" type="PanelContainer" parent="game options"]
self_modulate = Color(1, 1, 1, 0)
clip_contents = true
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 4

[node name="Button" type="Button" parent="game options/ai medium"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("2_8n17o")
text = "Medium"

[node name="ai hard" type="PanelContainer" parent="game options"]
self_modulate = Color(1, 1, 1, 0)
clip_contents = true
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 4

[node name="Button" type="Button" parent="game options/ai hard"]
layout_mode = 2
theme = ExtResource("2_8n17o")
text = "Hard"

[node name="back button" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 120.0
theme_override_styles/panel = SubResource("StyleBoxTexture_sd61m")

[node name="Button" type="Button" parent="back button"]
layout_mode = 2
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxTexture_i4wmu")
theme_override_styles/pressed = SubResource("StyleBoxTexture_humtf")
theme_override_styles/normal = SubResource("StyleBoxTexture_bvely")
icon = ExtResource("6_0bpc5")
icon_alignment = 1
expand_icon = true

[connection signal="mouse_entered" from="game options/ai easy/Button" to="." method="_on_button_hover"]
[connection signal="pressed" from="game options/ai easy/Button" to="." method="_on_easy_button_pressed"]
[connection signal="mouse_entered" from="game options/ai medium/Button" to="." method="_on_button_hover"]
[connection signal="pressed" from="game options/ai medium/Button" to="." method="_on_med_button_pressed"]
[connection signal="mouse_entered" from="game options/ai hard/Button" to="." method="_on_button_hover"]
[connection signal="pressed" from="game options/ai hard/Button" to="." method="_on_hard_button_pressed"]
[connection signal="mouse_entered" from="back button/Button" to="." method="_on_button_hover"]
[connection signal="pressed" from="back button/Button" to="." method="_on_back_button_pressed"]
